# parametrix

./: .gitignore 2  README.md  makefile  pyproject.toml  requirements.txt  structure.txt
src/parametrix/core/: trigger_registry.py  trigger_runner.py
src/parametrix/models/: ddpm_era5_upsampler.py
